Design new interface

--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
-		<title>tomato</title>
+		<title>Tomato - Pomodoro Clock</title>
 	</head>
 
 	<body>
-		<canvas id="mainCanvas" width="800" height="500"></canvas>
+		<main>
+			<div class="tomato">
+				<h1>Pomodoro Clock</h1>
+				<p>Clock status: Stopped</p>
+				<p>00:00 / 25:00</p>
+				<p>Pomodoro: 0 - Break: 0</p>
+
+				<button class="button">Start</button>
+				<button class="button">Reset</button>
+			</div>
+		</main>
 		<script type="text/javascript" src="js/tomato.js"></script>
 	</body>
 </html>
