--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<body>
 		<main>
-			<div class="tomato">
+			<div id="tomato" class="tomato">
 				<h1>Pomodoro Clock</h1>
 				<p>Clock status: <span id="status">Stopped</span></p>
 				<p><span id="time">00:00</span> / 25:00</p>
