--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<main>
 			<div id="tomato" class="tomato">
-				<h1>Pomodoro Clock</h1>
+				<h1>Tomato! Pomodoro Clock</h1>
 				<p>Clock status: <span id="status">Stopped</span></p>
 				<p><span id="time">00:00</span> / 25:00</p>
 				<p>Pomodoro: <span id="pomodoro">0</span> - Break: <span id="break">0</span></p>
