More classy look

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 	<body>
 		<main>
 			<div id="tomato" class="tomato">
-				<h1>Tomato! Pomodoro Clock</h1>
-				<p>Clock status: <span id="status">Stopped</span></p>
-				<p><span id="time">00:00</span> / 25:00</p>
+				<h1 id="time">00:00 / 25:00</h1>
+				<p id="status">Stopped</p>				
 				<p>Pomodoro: <span id="pomodoro">0</span> - Break: <span id="break">0</span></p>
 
 				<button id="button" class="button">Start</button>
